--- a/Assignment1.html
+++ b/Assignment1.html
@@ -13,11 +13,11 @@
         <li><a href="#contactme">Contact Me</a></li>
         
     </ul>
-    <nav>
-        <a href="#vogue">VOGUES</a>
+   <!-- <nav>
+        <a href="#vogue" >VOGUES</a>
         <a href="#flowers">FLOWERS</a>
         <a href="#vintage">VINTAGE</a>
-    </nav>
+    </nav>-->
     
     <div id="vogue">
         <h1>VOGUES</h1>
@@ -70,7 +70,7 @@
             <div class="image"><img src="pictures/g1 (31).jpeg"></div>   
         </div>
     </div>
-<footer class="footer">
+<footer>
     <div id="contactme">
             <form>
                 <div class="form-group">
