--- a/Assignment1.html
+++ b/Assignment1.html
@@ -13,11 +13,12 @@
         <li><a href="#contactme">Contact Me</a></li>
         
     </ul>
-   <!-- <nav>
+    <div id="box">
+   <nav>
         <a href="#vogue" >VOGUES</a>
         <a href="#flowers">FLOWERS</a>
         <a href="#vintage">VINTAGE</a>
-    </nav>-->
+    </nav>
     
     <div id="vogue">
         <h1>VOGUES</h1>
@@ -72,17 +73,14 @@
     </div>
 <footer>
     <div id="contactme">
-            <form>
                 <div class="form-group">
                     <label>CONTACT US</label>
                         <input type="email" class="form-control" id="email" placeholder="Enter Email address" ><br>
                         <textarea type="text" class="form-control" id="message" placeholder="Message"></textarea><br>
                         <center><button type="button" class="btn">Send</button></center>
-                    </div>
-            </form>
+                </div>
     </div>
 </footer>
-
-
+</div>
 </body>
 </html>
