--- a/Assignment1.html
+++ b/Assignment1.html
@@ -10,6 +10,7 @@
 <body>
     <ul>
         <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
         <li><a href="#contactme">Contact Me</a></li>
         
     </ul>
